--- a/CSS/main.css
+++ b/CSS/main.css
@@ -8,6 +8,27 @@
     background: transparent;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgb(61, 61, 61);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background: linear-gradient(180deg, rgba(120,0,246,1) 0%, rgba(255,0,193,1) 100%);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(180deg, rgb(150, 52, 255) 0%, rgb(255, 67, 208) 100%);
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -142,11 +163,23 @@ body {
     box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.3)
 }
 #tool_desc {
-
+    overflow-y: auto;
     font-size: 25px;
     margin: 40px;
     color: black;
-    line-height: 1.5
+    line-height: 1.5;
+}
+#tool_desc::-webkit-scrollbar{
+    width: 10px
+}
+#tool_desc::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+    background: linear-gradient(180deg, rgba(120,0,246,1) 0%, rgba(255,0,193,1) 100%);
+}
+
+#tool_desc::-webkit-scrollbar-track {
+    border-radius: 15px;
+    background: rgb(61, 61, 61);
 }
 .logo_container {
     display: grid;
